syntax = "proto3";

package urlshortener;
option go_package = "goads/internal/urlshortener/proto";
import "google/protobuf/empty.proto";

service ShortenerService {
  rpc Create(CreateRequest) returns (LinkResponse) {}
  rpc GetByID(GetByIDRequest) returns (LinkResponse) {}
  rpc GetByAuthor(GetByAuthorRequest) returns (LinksListResponse) {}
  rpc GetByAlias(GetByAliasRequest) returns (LinkResponse) {}
  rpc GetRedirect(GetByAliasRequest) returns (RedirectResponse) {}
  rpc UpdateAlias(UpdateAliasRequest) returns (LinkResponse) {}
  rpc AddAd(LinkAdRequest) returns (LinkResponse) {}
  rpc DeleteAd(LinkAdRequest) returns (LinkResponse) {}
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message LinkResponse {
  int64 id = 1;
  string url = 2;
  string alias = 3;
  int64 author_id = 4;
  repeated int64 ads = 5;
}

message LinksListResponse {
  repeated LinkResponse list = 1;
}

message CreateRequest {
  string url = 1;
  string alias = 2;
  int64 author_id = 3;
  repeated int64 ads = 4;
}

message GetByIDRequest {
  int64 id = 1;
}

message GetByAuthorRequest {
  int64 author_id = 1;
}

message GetByAliasRequest {
  string alias = 1;
}

message AdResponse {
  int64 id = 1;
  string title = 2;
  string text = 3;
}

message RedirectResponse {
  LinkResponse link = 1;
  AdResponse ad = 2;
}

message UpdateAliasRequest {
  int64 id = 1;
  int64 author_id = 2;
  string alias = 3;
}

message LinkAdRequest {
  int64 link_id = 1;
  int64 ad_id = 2;
  int64 author_id = 3;
}

message DeleteRequest {
  int64 id = 1;
  int64 author_id = 2;
}
